<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:baselineAligned="false"
        tools:context=".user.ProfileFragment">

        <ImageView
            android:id="@+id/fogoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/fogoc"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile"
            android:textSize="35sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/user_avatar"/>

            <ImageButton
                android:id="@+id/imageButtonAdd"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="-10dp"
                android:layout_marginEnd="150dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/add_btn"
                app:srcCompat="@drawable/pen" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="email@email.com"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="end|center_vertical"
                android:text="Sónia Soares"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/nif"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="end|center_vertical"
                android:text="249724820"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/phone"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="-10dp"
                android:text="930203020"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="350dp"
                android:layout_height="50dp"

                android:textSize="20sp"
                android:text="@string/profile_edit_btn"/>
            <Button
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="@string/log_out_btn"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
