<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.HomeFragment">

    <ImageView
        android:id="@+id/fogoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/fogoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/username_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="35sp"
        app:layout_constraintBaseline_toBaselineOf="@id/home_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fogoc" />

    <TextView
        android:id="@+id/home_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:text="@string/home_welcome"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/username_welcome"
        app:layout_constraintTop_toBottomOf="@+id/fogoc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_req"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="221dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hourglass"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire_prevented"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="221dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fire"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="374dp" />

</androidx.constraintlayout.widget.ConstraintLayout>